plugins {
	id 'java'
	id 'org.springframework.boot' version '3.2.2'
	id 'io.spring.dependency-management' version '1.1.4'
}

group = 'com.example'
version = '0.0.1-SNAPSHOT'

java {
	sourceCompatibility = '17'
}

configurations {
	compileOnly {
		extendsFrom annotationProcessor
	}
}

repositories {
	mavenCentral()
}

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter-web'
	compileOnly 'org.projectlombok:lombok'
	annotationProcessor 'org.projectlombok:lombok'
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	implementation group: 'org.jsoup', name: 'jsoup', version: '1.17.2'

	implementation group: 'org.apache.poi', name: 'poi', version: '5.2.5'
	implementation group: 'org.apache.poi', name: 'poi-ooxml', version: '5.2.5'
	implementation group: 'org.jxls', name: 'jxls-jexcel', version: '1.0.9'
	implementation group: 'org.dhatim', name: 'fastexcel-reader', version: '0.17.0'
	implementation group: 'org.dhatim', name: 'fastexcel', version: '0.17.0'
}

tasks.named('test') {
	useJUnitPlatform()
}
